--- a/langs/en_US/breadcrumb.lang
+++ b/langs/en_US/breadcrumb.lang
@@ -5,3 +5,4 @@ BreadcrumbSetup = Setup of Module Breadcrumb
 
 # CONF 
 BREADCRUMB_TOOLTIPS = It is used for Breadcrumb menu
+BREADCRUMB_NB_ELEMENT=Number élements display
